objects/Intranet_Defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Default values for specific item types</description>
    <fields>
        <fullName>Active_Status__c</fullName>
        <label>Active Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentTypes__c</fullName>
        <inlineHelpText>Types of Content an Item contains.  References another Custom Setting by Name</inlineHelpText>
        <label>ContentTypes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentViewerView__c</fullName>
        <label>ContentViewerView</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Source__c</fullName>
        <inlineHelpText>Source of the data (Integration System name, Manual Entry, etc)</inlineHelpText>
        <label>Create Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <inlineHelpText>Email subject, initially added for Chatter Poll suggestions</inlineHelpText>
        <label>EmailSubject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailToAddress__c</fullName>
        <inlineHelpText>Email address, intially added for Chatter Poll suggestions</inlineHelpText>
        <label>EmailToAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intranet_Container__c</fullName>
        <label>Intranet Container</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_RecordTypeId__c</fullName>
        <inlineHelpText>Intranet Item Record Type Id</inlineHelpText>
        <label>Item RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <inlineHelpText>Default value for Item_Type__c on Intranet_Item__c</inlineHelpText>
        <label>Item Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkBaseURL__c</fullName>
        <inlineHelpText>Base URL for link to item detail</inlineHelpText>
        <label>LinkBaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Action__c</fullName>
        <label>Link Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <label>Link Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Content_Items__c</fullName>
        <inlineHelpText>Used for Flexible items, to limit the total number of items in the list sent to the main Intranet home page.</inlineHelpText>
        <label>Max Content Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permalink__c</fullName>
        <inlineHelpText>How to generate the Permalink - &apos;ContentViewer&apos;,&apos;Link_URL__c&apos;</inlineHelpText>
        <label>Permalink</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_RecordTypeId__c</fullName>
        <inlineHelpText>Intranet Schedule Record Type Id</inlineHelpText>
        <label>Schedule RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchCategory__c</fullName>
        <inlineHelpText>Search Results Category</inlineHelpText>
        <label>SearchCategory</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchResultOrder__c</fullName>
        <inlineHelpText>Order in which to display the search results</inlineHelpText>
        <label>SearchResultOrder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SearchResultSortFieldDir__c</fullName>
        <inlineHelpText>ASC or DESC</inlineHelpText>
        <label>SearchResultSortFieldDir</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchResultSortField__c</fullName>
        <inlineHelpText>Field used to sort the search results</inlineHelpText>
        <label>SearchResultSortField</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingType__c</fullName>
        <inlineHelpText>Type of Custom Setting - &apos;ContentTypes&apos;,&apos;ItemType&apos;,&apos;Settings&apos;</inlineHelpText>
        <label>SettingType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrendType__c</fullName>
        <label>TrendType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Intranet Defaults</label>
</CustomObject>